# tree-sitter-ain

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  dupa.sh  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ain.pc.in
bindings/c/tree_sitter/: tree-sitter-ain.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ain/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAinTests/: TreeSitterAinTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test-files/: 2-host-content.ain  3-query.ain  4-headers.ain  5-method.ain  6-body.ain  7-full.ain  8-config.ain  9-backend.ain
